dev-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: web-app
